# promtior-chatbot-backend

./: Dockerfile  README.md  main.py  promtior_chatbot.py  pyproject.toml  requirements.txt  run_docker.sh
core/: chat_model.py  system_prompt.py
services/: pdf.py  scrapy.py  website_loader.py
